Fix: Fixed gap on open modal login

--- a/Frontend/pawcients-front/src/css/global/forms.css
+++ b/Frontend/pawcients-front/src/css/global/forms.css
@@ -1,3 +1,7 @@
+* {
+  padding: 0;
+  margin: 0;
+}
 .page-container {
   display: flex;
   align-items: center;
@@ -111,14 +115,14 @@
   background-color: #90cea3;
 }
 
-/* Sign up */ 
+/* Sign up */
 
 .signup-details {
   display: flex;
-  
 }
 
-.clinic-details, .vet-details {
+.clinic-details,
+.vet-details {
   padding: 5px 60px;
 }
 
@@ -127,9 +131,9 @@
   color: var(--main-green);
 }
 
-.vet-details{
-    border-right: 2px solid #bbcdc3;
-  }
+.vet-details {
+  border-right: 2px solid #bbcdc3;
+}
 
 form {
   display: flex;
@@ -153,7 +157,6 @@ input {
   border: 2px solid #bbcdc3;
   border-radius: 0.5rem;
 }
-
 
 @media only screen and (max-width: 768px) {
   .page-container {
