--- a/Frontend/pawcients-front/src/css/vet/dataManagement.scss
+++ b/Frontend/pawcients-front/src/css/vet/dataManagement.scss
@@ -1,7 +1,3 @@
-.management {
-  margin: 20px;
-}
-
 .management-header {
   display: flex;
   justify-content: space-between;
@@ -41,15 +37,12 @@
 
 @media (max-width: 1200px) {
   .management-table {
-
     td,
     th {
       padding: 10px;
     }
   }
 }
-
-
 
 @media (max-width: 600px) {
   .management-table {
@@ -90,13 +83,11 @@
       margin-right: 20px;
     }
   }
-
 }
 
 /* Creation form */
 
 .creation-section {
-
   input,
   select {
     width: 200px;
